--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "an app expressing chess",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "nodemon ./index.js --exec babel-node -e js"
   },
   "repository": {
     "type": "git",
@@ -13,10 +13,13 @@
   "author": "Zeyu Li",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
+    "babel-node": "0.0.1-security",
     "babel-preset-env": "^1.7.0"
   }
 }
