--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-stage-0": "^6.24.1",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
   },
