--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "url": "expressing-chess"
   },
   "author": "Zeyu Li",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^5.0.0",
+    "brcypt": "^1.0.1",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "babel-node": "0.0.1-security",
-    "babel-preset-env": "^1.7.0"
+    "@babel/plugin-proposal-optional-catch-binding": "^7.12.1"
   }
 }
